# b25

./: .env.example  .gitignore  BINANCE_TESTNET_GUIDE.md  CONTRIBUTING.md  CORS_FIX_SUMMARY.md  CRITICAL_ISSUES.md  CURRENT_STATUS.md  CURRENT_STATUS.txt  DASHBOARD_SERVER_IMPLEMENTATION.md  DEPLOYMENT_FILES.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FIX_DOCKERFILES.md  GO_LIVE_TRADING_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LEVERAGE_CONFIGURATION_GUIDE.md  MONOREPO_STRUCTURE.md  NGINX_SERVICE_ROUTING.md  NGINX_SSL_STATUS.md  QUICK_REFERENCE.md  README.md  SERVICES_ADMIN_PAGES_COMPLETE.md  SERVICES_COMPLETE.md  SERVICE_STATUS_FINAL.md  SERVICE_STATUS_REPORT.md  SSH_TUNNEL_GUIDE.md  SSL_QUICK_REFERENCE.md  SSL_SETUP_COMPLETE.md  SUCCESS_REPORT.md  USD_M_FUTURES_VERIFICATION.md  VERIFICATION_REPORT.md  VPN_ISSUE_REPORT.md  WEBSOCKET_RERENDER_FIX.md  check-all-services.sh  deploy-all-services.sh  docker-compose.simple.yml  final-verification.sh  health-report.sh  (+28 more)
docker/: DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.prod.yml  expose-ports.sh  nginx-proxy.conf  setup-nginx.sh
docs/: COMPONENT_SPECIFICATIONS.md  IMPLEMENTATION_GUIDE.md  INDEX.md  README.md  SYSTEM_ARCHITECTURE.md  sub-systems.md
scripts/: README.md  build-all.sh  deploy-prod.sh  dev-start.sh  dev-stop.sh  docker-build-all.sh  health-check.sh  test-all.sh  test-integration.sh
services/: README.md
services/market-data/: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FIX_SUMMARY.md  Makefile  QUICKSTART.md  README.md  config.example.yaml  deploy.sh  docker-compose.yml  market-data.service  prometheus.yml  uninstall.sh
services/market-data/examples/: consumer.py  consumer.rs
services/market-data/src/: config.rs  health.rs  main.rs  metrics.rs  orderbook.rs  publisher.rs  shm.rs  snapshot.rs  websocket.rs
services_audit/: 00_OVERVIEW.md  01_market-data.md  01_market-data_SESSION.md  02_dashboard-server.md  02_dashboard-server_SESSION.md  03_configuration.md  03_configuration_SESSION.md  04_strategy-engine.md  04_strategy-engine_SESSION.md  05_risk-manager.md  05_risk-manager_SESSION.md  06_order-execution.md  06_order-execution_SESSION.md  07_account-monitor.md  07_account-monitor_SESSION.md  08_api-gateway.md  08_api-gateway_SESSION.md  09_auth.md  09_auth_SESSION.md  10_analytics.md  10_analytics_SESSION.md  ACCOUNT_MONITOR_SUMMARY.md  CLEANUP_COMPLETE.md  CLEANUP_MARKET_DATA.md  DASHBOARD_SECURITY_FIXES.md  DASHBOARD_SERVER_COMPLETE.md  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_TEST_RESULTS.md  (+13 more)
shared/lib/rust/common/: Cargo.toml
shared/lib/rust/common/src/: circuit_breaker.rs  decimal.rs  errors.rs  id_generator.rs  lib.rs  order_book.rs  rate_limiter.rs  timestamp.rs
ui/terminal/: .gitignore  Cargo.toml  README.md  config.example.yaml
ui/terminal/src/: config.rs  keyboard.rs  main.rs  state.rs  types.rs  websocket.rs
ui/terminal/src/ui/: alerts.rs  fills.rs  help.rs  mod.rs  orderbook.rs  orders.rs  positions.rs  signals.rs  status.rs  theme.rs
(+691 files in other folders)
