[package]
name = "b25-common"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.35", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
async-trait = "0.1"

# Serialization
bincode = "1.3"
prost = "0.12"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

[dev-dependencies]
criterion = "0.5"
